examples/tests/invalid/sorted_errors_no_span.w
let a: num = "s";
let b =1;
class c extends b {
  init(){}
}
let d: num = "s";
class e extends b {
  init(){}
}